--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 streamlit
 google-cloud-texttospeech
 audio-recorder-streamlit
+google-generativeai
+deep-translator
+datasets
+SpeechRecognition
+gtts
+pyttsx3
+textblob
